Closed
Bug 413826
Opened 18 years ago
Closed 18 years ago
When autofilling login info, the username is now selected but not focused
Categories
(Camino Graveyard :: OS Integration, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: alqahira, Assigned: batwood.bugs)
References
()
Details
(Keywords: fixed1.8.1.12)
Attachments
(1 file)
874 bytes,
patch
|
stuart.morgan+bugzilla
:
review+
mark
:
superreview+
|
Details | Diff | Splinter Review |
STR:
1. Visit a site where you have saved login information but aren't logged in (e.g., visit http://wiki.caminobrowser.org/ and then click on the "log in/create account" link)
2. Let Camino autofill your username/password
3. Press the delete key
AR: You go back one page in history
ER: Either a) the prefilled username is deleted or b) after step 2, nothing is selected at all
In 1.6b2, the username was not selected when it was autofilled. In the era of multiple accounts, it might make sense for the username to be selected so the user can quickly type or delete to start selecting an alternate account, but in that case focus needs to end up in that field.
Note that this does work as expected with Gmail/Google login; I suspect they're doing some extra JS work to help us out.
(Also note that this could possibly be a Core regression during the past 5 days instead of our change; I haven't checked that possibility yet, but it seems less likely than our own changes.)
Flags: camino1.6?
Assignee | ||
Comment 1•18 years ago
|
||
Thanks for finding these. I'm trying to be pro-active in fixing them since I'll be on vacation starting next week. Hopefully we don't run across any show-stoppers.
Assignee: nobody → batwood.bugs
Status: NEW → ASSIGNED
Attachment #298946 -
Flags: review?(stuart.morgan)
Comment 2•18 years ago
|
||
Comment on attachment 298946 [details] [diff] [review]
patch
Since I don't think we want to muck with initial focus on pages, this is probably the best option.
Attachment #298946 -
Flags: superreview?(mark)
Attachment #298946 -
Flags: review?(stuart.morgan)
Attachment #298946 -
Flags: review+
Updated•18 years ago
|
Attachment #298946 -
Flags: superreview?(mark) → superreview+
Assignee | ||
Updated•18 years ago
|
Keywords: regression → checkin-needed
Reporter | ||
Comment 3•18 years ago
|
||
Checked in on the trunk and MOZILLA_1_8_BRANCH. Thanks for getting these so quickly, Bryan!
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Flags: camino1.6?
Keywords: checkin-needed → fixed1.8.1.12
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•