Bug 413826 - Don't select autofilled usernames. Patch by Bryan Atwood <batwood.bugs@gmail.com>, r=smorgan, sr=mento